--- a/src/scss/modules/projects.scss
+++ b/src/scss/modules/projects.scss
@@ -150,4 +150,8 @@
   @include mQ($mobile){
     padding: 0 0 1rem 0;
   }
+
+  &__description{
+    text-align: center;
+  }
 }
